# Theia_MCR-IQ_GUI

./: .gitignore  GUI_actions.py  GUI_setup.py  PSG_license.py  README.md  Theia_MCR-IQ_GUI.py  Theia_MCR-IQ_v.2.1.3.py  Theia_MCR-IQ_v.2.1.4.py  Theia_MCR-IQ_v.2.2.0.py  Theia_MCR-IQ_v.2.2.1.py  Theia_MCR-IQ_v.2.4.0.py  Theia_lens_GUI.py  app-Live GUI.py  history.txt  license  pyproject.toml  read_settings_files.py  utilities.py
config/: auto-py-to-exe.json
data/: LensData.json
